# AgentZer0

./: .env.example  .gitignore  CODEBASE_DOCUMENTATION.md  CODEBASE_MAP.md  Makefile  README.md  README_MCP_SERVERS.md  main.py  mcp_client.py  package-lock.json  package.json  pyproject.toml  test.py  test_components.py  test_groq.py  test_local_mcp.py
agentzer0/: __init__.py  agent.py  bot.py  config.py  main.py
agentzer0/discord_bot/: __init__.py  bot.py  events.py
agentzer0/llm/: __init__.py  groq_client.py
agentzer0/mcp/: __init__.py  client.py
agentzer0/mcp_servers/: __init__.py  web3_research_server.py
api/: routes.py
client/: agent.py  conversation.py  language_model.py  mcp_client.py
config/: config.txt  mcp_servers.json  settings.py
conversations/: conversation_2025-05-12_18-48-57.json  conversation_2025-05-12_18-49-30.json  conversation_2025-05-14_11-52-20.json  conversation_2025-05-14_11-54-21.json  conversation_2025-05-14_11-54-46.json  conversation_2025-05-14_11-59-48.json  conversation_2025-05-14_12-06-35.json  conversation_2025-05-14_12-10-46.json  conversation_2025-05-14_12-25-09.json
discord/: __init__.py  bot.py  commands.py  events.py
discord_bot/: README.md  __init__.py  bot.py  events.py
mcp_servers/coincap-mcp/: package-lock.json  package.json
mcp_servers/crypto-market-data/: server.py
mcp_servers/local-web-search/: .cursorrules  .gitignore  README.md  build.ts  package.json  setup.ts  tsconfig.json
tests/: test_discord_bot.py  test_llm.py  test_mcp_servers.py
trademaster/: agent.py  bot.py
utils/: logger.py  message_converter.py  tool_converter.py
(+15 files in other folders)
