[project]
name = "agentzer0"
version = "0.1.0"
description = ""
authors = [
    {name = "sturgis",email = "sturgis.steele@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12.0,<4.0"  # Compatible with dependencies
dependencies = [
    "anthropic>=0.50.0",
    "beautifulsoup4>=4.13.4",
    "fastapi>=0.115.12",
    "mcp>=1.6.0",
    "python-dotenv>=1.1.0",
    "groq>=0.4.0",
    "langchain-groq>=0.3.0",  # Use specific version constraint instead of @latest
    "langchain-core>=0.1.5",
    "discord.py>=2.3.2",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"