[project]
name = "agentzer0final"
version = "0.1.0"
description = ""
authors = [
    {name = "sturgis",email = "sturgis.steele@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "mcp-use[search] (>=1.2.13,<2.0.0)",
    "langchain[openai] (>=0.3.25,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
package-mode = false
